--- a/form_reg.html
+++ b/form_reg.html
@@ -82,7 +82,7 @@
 				}
 			</script>
 <header>
-	<div class="zh">Проект зазработан в 2022 году для Овцы</div>
+	<div class="zh">Проект зазработан в 2022 году для закрытия дисциплина: "Интернет технологии</div>
   </header>
 
 
