--- a/form_res.html
+++ b/form_res.html
@@ -53,7 +53,7 @@
 
 
 	<header>
-		<div class="zh">Проект зазработан в 2022 году для Овцы</div>
+		<div class="zh">Проект зазработан в 2022 году для закрытия дисциплина: "Интернет технологии</div>
 	  </header>
     
 </html>
