--- a/author.html
+++ b/author.html
@@ -33,9 +33,13 @@
                 <div class="col 16 s12">
                     <p class="aut">Авторы</p>
                     <ul>
-                            <p><a class="red-text" href="https://vk.com/idnan13" target="_blank">Вёрстка сайта Семениченко Д.В.</a></p>  
-                            <p><a class="red-text" href="https://vk.com/loiicom" target="_blank">Функции сайта Маркин Н.Д.</a></p>       
-                            <p><a class="red-text" href="https://vk.com/annushka_petrusha" target="_blank">Макет сайта Петруша А.О.</a></p>                       
+                            <p><a class="red-text" href="https://github.com/Nan-13/Maga/blob/main/readme.md" target="_blank">Вёрстка сайта Семениченко Д.В.</a></p>  
+                            <p><a class="red-text" href="https://github.com/MarkinNikita/MARKIN" target="_blank">Функции сайта Маркин Н.Д.</a></p>       
+                            <p><a class="red-text" href="https://docs.google.com/spreadsheets/d/1ypxgDUpNsaAK5PH90dTfGKdtDnWaeEDWfupEbDokN6A/edit#gid=1891559469" target="_blank">Макет сайта Петруша А.О.</a></p>    
+                            <p><a class="red-text" href="https://github.com/Leo-alt-droid/IT2022/blob/main/README.md" target="_blank">Руководитель проекта Чешков Л.А.</a></p>    
+                            <p><a class="red-text" href="https://github.com/bagofpockets" target="_blank">Консалтинг Кручков П.Р.</a></p>
+                            <p><a class="red-text" href="https://docs.google.com/spreadsheets/d/1ypxgDUpNsaAK5PH90dTfGKdtDnWaeEDWfupEbDokN6A/edit#gid=1891559469" target="_blank">Научные исследования Легистаев Е.А</a></p>
+                            <p><a class="red-text" href="https://docs.google.com/spreadsheets/d/1ypxgDUpNsaAK5PH90dTfGKdtDnWaeEDWfupEbDokN6A/edit#gid=1891559469" target="_blank">Парфёнова А.С</a></p>
                             <p><a class="red-text" href="https://stankin.ru/subdivisions/id_180/stuffs?user=655" target="_blank">Преподаватель Овчинников П.Е.</a></p>                    
                     </ul>
                 </div>
